# bug-wars

./: README.md  conversor_cor_png.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_stars_validation.py
docs/: ants_parameters.md  architecture.md
src/: __init__.py  main.py
src/adapters/: headless_adapter.py  pygame_adapter.py
src/ai/: enemy_controller.py
src/config/: settings.py
src/core/: app_config.py  engine.py  events.py  game_engine.py  interfaces.py  level_config.py  level_progression.py  level_scene.py  levels.py  levels_campaign.py  levels_intro.py  nest_types.py  scene_manager.py
src/core/scenes/: defeat_scene.py  title_scene.py  victory_scene.py
src/entities/: ant.py  ant_types.py  colony.py  nest.py
src/input/: input_handler.py
src/rendering/: renderer.py  sprite_renderer.py  ui_helper.py  ui_renderer.py
src/scripts/: demo_ant_types.py
src/systems/: animation.py  movement.py  selection.py
src/utils/: asset_loader.py  logging_config.py  math_utils.py
tests/: conftest.py
tests/test_core/: test_engine_quit.py  test_levels.py  test_levelscene_input.py  test_ownership_persistence.py
tests/test_entities/: test_ant_types.py  test_colony_production.py  test_nest.py
tests/test_systems/: test_movement.py
tests/test_utils/: test_math_utils.py  test_no_pygame_in_core_or_entities.py
