[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ant-simulator"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "colorama==0.4.6",
    "pygame==2.6.1",
    "pygments==2.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v"]